--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="nav2">
     <div class="bildeboks1">
-        <img class="VLFKlogo" src="./Bilder/VLFK.png">
+        <img class="VLFKlogo" src="Bilder/VLFK.png">
     </div>
     <div class="AmalieSkram">
         <h1>Amalie Skram</h1>
