--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
     <div>
         <div class="bildebokskontakt">
-            <img class="kontakt" src="./Bilder/Kontakt Oss.png">
+            <img class="kontakt" src="Bilder/Kontakt Oss.png">
         </div>
     </div>
 
     <div>
         <div class="bildeboksCartoon">
-            <img class="Cartoon" src="/Bilder/HjelpCartoon.png">
+            <img class="Cartoon" src="Bilder/HjelpCartoon.png">
         </div>
     </div>
 
