--- a/mineprosjekter.html
+++ b/mineprosjekter.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amalie Skram vgs</title>
     <meta name="description" content="Her kan du se mine litt større prosjekter på skolen.">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="nav2">
         <div class="bildeboks1">
-            <img class="VLFKlogo" src="./Bilder/VLFK.png">
+            <img class="VLFKlogo" src="Bilder/VLFK.png">
         </div>
         <div class="AmalieSkram">
             <h1>Amalie Skram</h1>
